--- a/blogs.html
+++ b/blogs.html
@@ -29,7 +29,7 @@
 							<li><a href="newsletters.html">Newsletters</a></li>
 							<li class="active"><a href="blogs.html">Blogs</a></li>
 							<li><a href="technical-papers.html">Papers</a></li>
-							<!-- <li><a href="bio.html">Biography</a></li> -->
+							<li><a href="bio.html">Accomplishments</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/DougMcIntire" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
