--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<li><a href="newsletters.html">Newsletters</a></li>
 							<li><a href="blogs.html">Blogs</a></li>
 							<li><a href="technical-papers.html">Papers</a></li>
-							<!-- <li><a href="bio.html">Biography</a></li> -->
+							<li><a href="bio.html">Accomplishments</a></li>
 							
 						</ul>
 						<ul class="icons">
