--- a/technical-papers.html
+++ b/technical-papers.html
@@ -29,7 +29,7 @@
 							<li><a href="newsletters.html">Newsletters</a></li>
 							<li><a href="blogs.html">Blogs</a></li>
 							<li class="active"><a href="technical-papers.html">Papers</a></li>
-							<!-- <li><a href="bio.html">Biography</a></li> -->
+							<li><a href="bio.html">Accomplishments</a></li>
 
 						</ul>
 						<ul class="icons">
