Corrected broken links

--- a/technical-papers.html
+++ b/technical-papers.html
@@ -57,78 +57,78 @@
 								<article>
 									<header>
 										<span class="date">July 2018</span>
-										<h2><a href="https://www.netgate.com/resources/technical-papers-backup-and-restore">Backup and Restore for pfSense</a></h2>
+										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-backup.pdf">Backup and Restore for pfSense</a></h2>
 									</header>
-									<a href="https://www.netgate.com/resources/technical-papers-backup-and-restore" class="image fit"><img src="images/pfsense-why-to-backup.jpg" alt="Backup and Restore for pfSense" /></a>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-backup.pdf" class="image fit"><img src="images/pfsense-why-to-backup.jpg" alt="Backup and Restore for pfSense" /></a>
 									<p>5 Things to Remember for pfSense Software</p>
 									<ul class="actions special">
-										<li><a href="https://www.netgate.com/resources/technical-papers-backup-and-restore" class="button">Backup and Restore for pfSense</a></li>
+										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-backup.pdf" class="button">Backup and Restore for pfSense</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">June 2018</span>
-										<h2><a href="https://www.netgate.com/resources/technical-papers-use-packages-part-1">Use pfSense Packages – Part 1</a></h2>
+										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-use-packages-part1.pdf">Use pfSense Packages – Part 1</a></h2>
 									</header>
-									<a href="https://www.netgate.com/resources/technical-papers-use-packages-part-1" class="image fit"><img src="images/pfsense-why-to-use-packages-part1.png" alt="" /></a>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-use-packages-part1.pdf" class="image fit"><img src="images/pfsense-why-to-use-packages-part1.png" alt="" /></a>
 									<p>5 Robust Add-on Free Features for pfSense</p>
 									<ul class="actions special">
-										<li><a href="https://www.netgate.com/resources/technical-papers-use-packages-part-1" class="button">Use pfSense Packages – Part 1</a></li>
+										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-use-packages-part1.pdf" class="button">Use pfSense Packages – Part 1</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">May 2018</span>
-										<h2><a href="https://www.netgate.com/resources/technical-papers-pfsense-console-menu-part-1">pfSense Console Menu – Part 1</a></h2>
+										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-console-menu-part1.pdf">pfSense Console Menu – Part 1</a></h2>
 									</header>
-									<a href="https://www.netgate.com/resources/technical-papers-pfsense-console-menu-part-1" class="image fit"><img src="images/pfsense-console-menu-part1.png" alt="" /></a>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-console-menu-part1.pdf" class="image fit"><img src="images/pfsense-console-menu-part1.png" alt="" /></a>
 									<p>7 Tricks You May Not Know About</p>
 									<ul class="actions special">
-										<li><a href="https://www.netgate.com/resources/technical-papers-pfsense-console-menu-part-1" class="button">pfSense Console Menu – Part 1</a></li>
+										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-console-menu-part1.pdf" class="button">pfSense Console Menu – Part 1</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 2018</span>
-										<h2><a href="https://www.netgate.com/resources/technical-papers-graceful-shutdowns">Graceful Shutdowns for pfSense</a></h2>
+										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-graceful-shutdown.pdf">Graceful Shutdowns for pfSense</a></h2>
 									</header>
-									<a href="https://www.netgate.com/resources/technical-papers-graceful-shutdowns" class="image fit"><img src="images/pfsense-graceful-shutdown.png" alt="" /></a>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-graceful-shutdown.pdf" class="image fit"><img src="images/pfsense-graceful-shutdown.png" alt="" /></a>
 									<p>5 Tips to Shutdown pfSense Gracefully</p>
 									<ul class="actions special">
-										<li><a href="https://www.netgate.com/resources/technical-papers-graceful-shutdowns" class="button">Graceful Shutdowns for pfSense</a></li>
+										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-graceful-shutdown.pdf" class="button">Graceful Shutdowns for pfSense</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">March 2018</span>
-										<h2><a href="https://www.netgate.com/resources/technical-papers-update-update-update">Update, Update, Update</a></h2>
+										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-update.pdf">Update, Update, Update</a></h2>
 									</header>
-									<a href="https://www.netgate.com/resources/technical-papers-update-update-update" class="image fit"><img src="images/pfsense-why-to-update.png" alt="" /></a>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-update.pdf" class="image fit"><img src="images/pfsense-why-to-update.png" alt="" /></a>
 									<p>6 Tips to Make Your pfSense Update Smooth</p>
 									<ul class="actions special">
-										<li><a href="https://www.netgate.com/resources/technical-papers-update-update-update" class="button">Update, Update, Update</a></li>
+										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-update.pdf" class="button">Update, Update, Update</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">February 2018</span>
-										<h2><a href="https://www.netgate.com/resources/technical-papers-pfsense-best-practices-part-1">pfSense Best Practices – Part 1</a></h2>
+										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-best-practices-part1.pdf">pfSense Best Practices – Part 1</a></h2>
 									</header>
-									<a href="https://www.netgate.com/resources/technical-papers-pfsense-best-practices-part-1" class="image fit"><img src="images/pfsense-best-practices-part1.png" alt="" /></a>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-best-practices-part1.pdf" class="image fit"><img src="images/pfsense-best-practices-part1.png" alt="" /></a>
 									<p>5 Tips for Using pfSense Software</p>
 									<ul class="actions special">
-										<li><a href="https://www.netgate.com/resources/technical-papers-pfsense-best-practices-part-1" class="button">pfSense Best Practices – Part 1</a></li>
+										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-best-practices-part1.pdf" class="button">pfSense Best Practices – Part 1</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">April 7, 2017</span> -->
-										<h2><a href="https://www.netgate.com/resources/technical-papers-why-choose-64-bit">Why Choose 64-bit for pfSense?</a></h2>
+										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-why-64-bit.pdf">Why Choose 64-bit for pfSense?</a></h2>
 									</header>
-									<a href="https://www.netgate.com/resources/technical-papers-why-choose-64-bit" class="image fit"><img src="images/pfsense-why-64-bit.png" alt="" /></a>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-why-64-bit.pdf" class="image fit"><img src="images/pfsense-why-64-bit.png" alt="" /></a>
 									<p>3 Reasons to Upgrade Your Firewall</p>
 									<ul class="actions special">
-										<li><a href="https://www.netgate.com/resources/technical-papers-why-choose-64-bit" class="button">Why Choose 64-bit for pfSense?</a></li>
+										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-why-64-bit.pdf" class="button">Why Choose 64-bit for pfSense?</a></li>
 									</ul>
 								</article>
 							</section>
