Added Cedar Park Newsletter

--- a/newsletters.html
+++ b/newsletters.html
@@ -59,6 +59,17 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">2024</span>
+										<h2>Cedar Park Tourism</h2>
+									</header>
+									<img src="images/cedar-park-destination-small.jpg" alt="Cedar Park Destination" height="133" width="400" />
+									<p>Applying for the Tourism Marketing Manager role for the city of Cedar Park, I wrote a sample newsletter for January 2024 that I called the "Cedar Park Destination Newsletter". I wanted to highlight some of my skills during the applicaiton process, so writing a sample newsletter seemed like a good idea.</p>
+									<ul class="actions special">
+										<li><a href="documents/sample-january-2024-cedar-park-tourism-newsletter.pdf" class="button">Sample January 2024 Cedar Park Destination Newsletter</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">2023</span>
 										<h2><a href="#">2023 Monthly Netgate Newsletters</a></h2>
 									</header>
