Added Why To Visit Cedar Park Microbreweries

--- a/technical-papers.html
+++ b/technical-papers.html
@@ -56,11 +56,22 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">January 2024</span>
+										<h2>Why To Visit Cedar Park Microbreweries</h2>
+									</header>
+									<p>Applying for the Tourism Marketing Manager role for the city of Cedar Park, I wrote a sample paper on Microbreweries in and around Cedar Park. The idea would be to convert this paper into a blog or to make it available to newsletter subscribers who have shown interest in the brewery articles.</p>
+									<img src="images/why-to-visit-cedar-park-microbreweries.jpg" alt="Why To Visit Cedar Park Microbreweries" />
+									<ul class="actions special">
+										<li><a href="documents/why-to-visit-cedar-park-microbreweries.pdf" class="button">Why To Visit Cedar Park Microbreweries</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">July 2018</span>
 										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-backup.pdf">Backup and Restore for pfSense</a></h2>
 									</header>
-									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-backup.pdf" class="image fit"><img src="images/pfsense-why-to-backup.jpg" alt="Backup and Restore for pfSense" /></a>
 									<p>5 Things to Remember for pfSense Software</p>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-backup.pdf" class="image fit"><img src="images/pfsense-why-to-backup.jpg" alt="Backup and Restore for pfSense" /></a>
 									<ul class="actions special">
 										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-backup.pdf" class="button">Backup and Restore for pfSense</a></li>
 									</ul>
@@ -70,8 +81,8 @@
 										<span class="date">June 2018</span>
 										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-use-packages-part1.pdf">Use pfSense Packages – Part 1</a></h2>
 									</header>
-									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-use-packages-part1.pdf" class="image fit"><img src="images/pfsense-why-to-use-packages-part1.png" alt="" /></a>
 									<p>5 Robust Add-on Free Features for pfSense</p>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-use-packages-part1.pdf" class="image fit"><img src="images/pfsense-why-to-use-packages-part1.png" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-use-packages-part1.pdf" class="button">Use pfSense Packages – Part 1</a></li>
 									</ul>
@@ -81,8 +92,8 @@
 										<span class="date">May 2018</span>
 										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-console-menu-part1.pdf">pfSense Console Menu – Part 1</a></h2>
 									</header>
-									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-console-menu-part1.pdf" class="image fit"><img src="images/pfsense-console-menu-part1.png" alt="" /></a>
 									<p>7 Tricks You May Not Know About</p>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-console-menu-part1.pdf" class="image fit"><img src="images/pfsense-console-menu-part1.png" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-console-menu-part1.pdf" class="button">pfSense Console Menu – Part 1</a></li>
 									</ul>
@@ -92,8 +103,8 @@
 										<span class="date">April 2018</span>
 										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-graceful-shutdown.pdf">Graceful Shutdowns for pfSense</a></h2>
 									</header>
-									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-graceful-shutdown.pdf" class="image fit"><img src="images/pfsense-graceful-shutdown.png" alt="" /></a>
 									<p>5 Tips to Shutdown pfSense Gracefully</p>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-graceful-shutdown.pdf" class="image fit"><img src="images/pfsense-graceful-shutdown.png" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-graceful-shutdown.pdf" class="button">Graceful Shutdowns for pfSense</a></li>
 									</ul>
@@ -103,8 +114,8 @@
 										<span class="date">March 2018</span>
 										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-update.pdf">Update, Update, Update</a></h2>
 									</header>
-									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-update.pdf" class="image fit"><img src="images/pfsense-why-to-update.png" alt="" /></a>
 									<p>6 Tips to Make Your pfSense Update Smooth</p>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-update.pdf" class="image fit"><img src="images/pfsense-why-to-update.png" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfSense-why-to-update.pdf" class="button">Update, Update, Update</a></li>
 									</ul>
@@ -114,8 +125,8 @@
 										<span class="date">February 2018</span>
 										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-best-practices-part1.pdf">pfSense Best Practices – Part 1</a></h2>
 									</header>
-									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-best-practices-part1.pdf" class="image fit"><img src="images/pfsense-best-practices-part1.png" alt="" /></a>
 									<p>5 Tips for Using pfSense Software</p>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-best-practices-part1.pdf" class="image fit"><img src="images/pfsense-best-practices-part1.png" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-best-practices-part1.pdf" class="button">pfSense Best Practices – Part 1</a></li>
 									</ul>
@@ -125,8 +136,8 @@
 										<!-- <span class="date">April 7, 2017</span> -->
 										<h2><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-why-64-bit.pdf">Why Choose 64-bit for pfSense?</a></h2>
 									</header>
-									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-why-64-bit.pdf" class="image fit"><img src="images/pfsense-why-64-bit.png" alt="" /></a>
 									<p>3 Reasons to Upgrade Your Firewall</p>
+									<a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-why-64-bit.pdf" class="image fit"><img src="images/pfsense-why-64-bit.png" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://cdn2.hubspot.net/hubfs/1826203/why-to-series/pfsense-why-64-bit.pdf" class="button">Why Choose 64-bit for pfSense?</a></li>
 									</ul>
